kubernetes/kafka/07-pod-kafka-producer-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-producer-test
  namespace: kafka
spec:
  containers:
    - name: kafka-producer
      image: confluentinc/cp-kafka:latest
      command: ["sh", "-c"]
      args:
        - |
          while true; do
            echo "$(date): Test Message" | \
            kafka-console-producer --broker-list $KAFKA_BROKER --topic $TOPIC_NAME --producer.config /config/client.properties
            sleep 1
          done
      volumeMounts:
        - name: kafka-client-config
          mountPath: /config
          readOnly: true
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - "ALL"
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
  volumes:
    - name: kafka-client-config
      configMap:
        name: kafka-client-config
  restartPolicy: Never
